# smoothG

./: .dir-locals.el  .gitignore  .travis.yml  CMakeLists.txt  COPYRIGHT  Doxyfile.in  INSTALL.md  README.md  explicitdependencies.cmake  index.html  parsemk.py  smoothG_config.h.in  smoothg.astylerc
cmake/: smoothgConfig.cmake.in
cmake/modules/: CMakeUtilities.cmake  FindARPACK.cmake  FindHYPRE.cmake  FindMATRED.cmake  FindMETIS.cmake  FindMFEM.cmake  FindSuiteSparse.cmake
config/: example_config_debug.sh  example_config_release.sh  example_config_release_with_arpack.sh  extern_build.sh  gelever.sh  smoothG_config.h.in
config/build_scripts/: build_extern.sh  build_hypre.sh  build_linalg.sh  build_metis.sh  build_mpich.sh  build_suitesparse.sh
doc/: CONTRIBUTING.md  EXAMPLE.md  front.md
examples/: CMakeLists.txt  ParseMLMCOutput.py  ProcessMLMCOutput.py  Sampler.hpp  dirichletpressure.cpp  ex1.cpp  ex1_hypre.cpp  ex2.cpp  ex2_hypre.cpp  ex4p.cpp  finitevolume.cpp  finitevolume_redist.cpp  fv_weakscaling.cpp  generalgraph.cpp  generalhybrid.cpp  generalhybrid_fv.cpp  graphupscale.cpp  hybridprec.cpp  hybridprecond.hpp  mixed_fe.cpp  mleigen.cpp  mlmc.cpp  mltopo.cpp  nldarcy.cpp  nonconforming.cpp  pde.hpp  plotgraph.py  poweriter.cpp  qoi.cpp  qoivis.py  readjson.py  sampler.cpp  samplesolve.cpp  spacetime.cpp  spe10.hpp  spe10_mlmc.cpp  stest.py  timestep.cpp  tleigen.cpp  twophase.cpp  (+3 more)
generated-docs/html/: FiniteVolumeUpscale_8cpp.html  FiniteVolumeUpscale_8hpp.html  GraphCoarsen_8cpp.html  GraphCoarsen_8hpp.html  GraphGenerator_8cpp.html  GraphGenerator_8hpp.html  GraphTopology_8cpp.html  GraphTopology_8hpp.html  GraphUpscale_8cpp.html  GraphUpscale_8hpp.html  HybridSolver_8cpp.html  HybridSolver_8hpp.html  LocalMixedGraphSpectralTargets_8cpp.html  LocalMixedGraphSpectralTargets_8hpp.html  MatrixUtilities_8cpp.html  MatrixUtilities_8hpp.html  MetisGraphPartitioner_8cpp.html  MetisGraphPartitioner_8hpp.html  MinresBlockSolver_8cpp.html  MinresBlockSolver_8hpp.html  MixedLaplacianSolver_8cpp.html  MixedLaplacianSolver_8hpp.html  MixedMatrix_8cpp.html  MixedMatrix_8hpp.html  Mixed__GL__Coarsener_8cpp.html  Mixed__GL__Coarsener_8hpp.html  SpectralAMG__MGL__Coarsener_8cpp.html  SpectralAMG__MGL__Coarsener_8hpp.html  UpscaleOperators_8hpp.html  Upscale_8cpp.html  Upscale_8hpp.html  _2home_2barker29_2graph-laplacian_2housekeeping_2examples_2generalgraph_8cpp-example.html  annotated.html  arpackeig_8cpp.html  arpackeig_8hpp.html  classHalfCoeffecient-members.html  classHalfCoeffecient.html  classSPE10Problem-members.html  classSPE10Problem.html  classes.html  (+94 more)
generated-docs/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_7e.js  classes_65.js  classes_66.js  classes_67.js  classes_68.js  classes_69.js  classes_6c.js  classes_6d.js  classes_70.js  classes_73.js  classes_75.js  enums_70.js  files_61.js  files_66.js  files_67.js  files_68.js  files_6c.js  files_6d.js  files_70.js  files_73.js  (+29 more)
graphdata/: fe_part.txt  fe_rhs.txt  fe_vertex_edge.txt  fe_weight_0.txt  fe_weight_19.txt  fiedler_sample.txt  partition_sample.txt  vertex_edge_sample.txt  vertex_edge_tiny.txt
include/: Graph.hpp  GraphCoarsen.hpp  GraphEdgeSolver.hpp  GraphGenerator.hpp  GraphTopology.hpp  GraphUpscale.hpp  HybridSolver.hpp  LocalEigenSolver.hpp  MGLSolver.hpp  MinresBlockSolver.hpp  MixedMatrix.hpp  SPDSolver.hpp  SharedEntityComm.hpp  Upscale.hpp  UpscaleOperators.hpp  Utilities.hpp  smoothG.hpp
src/: BlockSolver.cpp  BlockSolver.hpp  CMakeLists.txt  CoarseLocalMBuilder.cpp  CoarseLocalMBuilder.hpp  DofHandler.cpp  DofHandler.hpp  FiniteVolumeMLMC.cpp  FiniteVolumeMLMC.hpp  FiniteVolumeUpscale.cpp  FiniteVolumeUpscale.hpp  Graph.cpp  Graph.hpp  GraphCoarsen.cpp  GraphCoarsen.hpp  GraphCoarsenBuilder.cpp  GraphCoarsenBuilder.hpp  GraphEdgeSolver.cpp  GraphEdgeSolver.hpp  GraphGenerator.cpp  GraphGenerator.hpp  GraphSpace.cpp  GraphSpace.hpp  GraphTopology.cpp  GraphTopology.hpp  GraphUpscale.cpp  GraphUpscale.hpp  Hierarchy.cpp  Hierarchy.hpp  HybridSolver.cpp  HybridSolver.hpp  LocalCoarseMBuilder.cpp  LocalEigenSolver.cpp  LocalEigenSolver.hpp  LocalMixedGraphSpectralTargets.cpp  LocalMixedGraphSpectralTargets.hpp  MGLSolver.cpp  MGLSolver.hpp  MLMCManager.cpp  MLMCManager.hpp  (+38 more)
testcode/: CMakeLists.txt  coarse_assembling.cpp  eigen.cpp  lineargraph.cpp  lineargraphthree.cpp  mltopo.cpp  partinygraph.cpp  rescaling.cpp  test_Graph.cpp  test_IsolatePartitioner.cpp  test_MetisGraphPartitioner.cpp  tinygraph.py  tinygraphsolver.cpp  wattsstrogatz.cpp
